# backend-financial-management

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: auth.py  categories.py  expenses.py  friends.py  groups.py  health.py  router.py
app/core/: config.py  deps.py  errors.py  security.py
app/migrations/: env.py
app/migrations/versions/: 202602110001_initial_schema.py
app/models/: __init__.py  category.py  enums.py  expense.py  expense_split.py  friend.py  group.py  user.py
app/schemas/: auth.py  category.py  common.py  expense.py  friend.py  group.py  user.py
app/services/: auth_service.py  pagination.py  split_service.py
docker/: start.sh
tests/: conftest.py  test_auth.py  test_categories.py  test_expenses_split.py
